# CRUMPET-Android

./: .gitignore  .gitmodules  CMakeLists.txt  CODE OF CONDUCT.md  EarGear Protocol v1.docx  HACKING.md  Messages.sh  MiTail-Firmware  README.md  changelog.txt  code of conduct.md
data/: AndroidManifest.xml  build.gradle
data/res/drawable/: ic_digitail.xml  splash.xml  splashscreen.xml
data/res/values/: strings.xml  theme.xml
data/src/org/thetailcompany/digitail/: AbstractPhonecallReceiver.java  PhonecallReceiver.java  SplashActivity.java  TailActivity.java  TailService.java
src/: Alarm.cpp  Alarm.h  AlarmList.cpp  AlarmList.h  AndroidHelper.cpp  AndroidHelper.h  AppSettings.cpp  AppSettings.h  AppSettingsProxy.rep  BTConnectionManager.cpp  BTConnectionManager.h  BTConnectionManagerProxy.rep  BTDevice.cpp  BTDevice.h  BTDeviceCommandModel.cpp  BTDeviceCommandModel.h  BTDeviceEars.cpp  BTDeviceEars.h  BTDeviceFake.cpp  BTDeviceFake.h  BTDeviceMitail.cpp  BTDeviceMitail.h  BTDeviceModel.cpp  BTDeviceModel.h  BTDeviceTail.cpp  BTDeviceTail.h  CMakeLists.txt  CommandInfo.cpp  CommandInfo.h  CommandModel.cpp  CommandModel.h  CommandPersistence.cpp  CommandPersistence.h  CommandQueue.cpp  CommandQueue.h  CommandQueueProxy.rep  DeviceModel.cpp  DeviceModel.h  FilterProxyModel.cpp  FilterProxyModel.h  (+60 more)
src/commands/: digitail-builtin.crumpet  eargear-base.crumpet  eargear2-base.crumpet  mitail-builtin.crumpet  mitail-lights-builtin.crumpet  mitailmini-builtin.crumpet  mitailmini-lights-builtin.crumpet
src/gearimplementations/: GearDigitail.cpp  GearDigitail.h  GearEars.cpp  GearEars.h  GearFake.cpp  GearFake.h  GearFlutterWings.cpp  GearFlutterWings.h  GearMitail.cpp  GearMitail.h  GearMitailMini.cpp  GearMitailMini.h
src/org/thetailcompany/digitail/: TailService.java
src/po/: digitail.pot
src/po/cs_CZ/: digitail.po
src/po/da_DK/: digitail.po
src/po/de_CH/: digitail.po
src/po/de_DE/: digitail.po  digitail.pot
src/po/de_FY/: digitail.po
src/po/en@pirate/: digitail.po
src/po/en_FY/: digitail.po
src/po/es_ES/: digitail.po
src/po/et/: digitail.po
src/po/fr/: digitail.po
src/po/it/: digitail.po
src/po/ja_JP/: digitail.po
src/po/lt/: digitail.po
src/po/nl_NL/: digitail.po
src/po/pl/: digitail.po
src/po/ru/: digitail.po
src/po/tlh/: digitail.po
src/po/uk/: digitail.po
src/qml/: AboutPage.qml  ActiveMovePopup.qml  AlarmEditor.qml  AlarmList.qml  BaseCommandListEditor.qml  BaseMovesComponent.qml  BaseMovesPage.qml  BasicListItem.qml  CommandPausePicker.qml  ConnectToTail.qml  DatePicker.qml  DeveloperModePage.qml  DisconnectOptions.qml  EarPoses.qml  FlatButton.qml  GearGestures.qml  IdleModePage.qml  IdlePauseRangePicker.qml  InfoCard.qml  ListenSettings.qml  MessageBox.qml  MoveListEditor.qml  MoveLists.qml  NamePicker.qml  NotConnectedCard.qml  PhoneEventEditor.qml  PhoneEventList.qml  PickACommandSheet.qml  SettingsCard.qml  SettingsCrumpetPicker.qml  SettingsPage.qml  ShakeToWag.qml  TailBattery.qml  TailLights.qml  TailMoves.qml  TailPoses.qml  TiltSettings.qml  TimePicker.qml  WelcomePage.qml  main.qml
src/video/: readme  squarelo.mpeg
